--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2578,6 +2578,14 @@
 		Ukrainian:"Зруйнувати"
 }
 
+	"Destroy":{
+
+}
+
+	"Destroying the city instantly razes the city to the ground.":{
+
+}
+
 	"Razing the city annexes it, and starts razing the city to the ground.":{
 		Italian:"Questa opzione ti permetterà di annettere la città e poi di raderla al suolo."
 		Czech:"Vyhlazování města zároveň způsobí jeho anektování a započne srovnávání města ze zemí."
