--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -78,7 +78,7 @@
 }
 
 	"One City Challenge":{
-		
+		Italian:"Sfida a città singola"
 	}
 
 	"No barbarians":{//it can be showed correct as usual, so I'm not translate it.
