City-state allies with most influencing civ. (#1291)
* City-state allies with most influencing civ.

* More notifications for alliance. More intense status update.

* Fix a crash about lateinit tiles.

* More reasonable civInfo.setTransients.

--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -669,6 +669,15 @@
 		Czech:"Vliv: "
 }
 
+	"Reach 30 for friendship.":{
+}
+
+	"Reach highest influence above 60 for alliance.":{
+}
+
+	"Ally: ":{
+}
+
 ////// Trade
 
 	"Trade":{
