--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -778,4 +778,9 @@
 		Ukrainian:"[nation]: відмова не будувати міста поруч з нами!"
 	}
 
+	"We have allied with [nation].": {
+	}
+
+	"We have lost alliance with [nation].": {
+	}
 }
