--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -84,7 +84,8 @@
 
 	"One City Challenge":{
 		Italian:"Sfida a città singola"
-		Polish:"Wyzwanie z limitem 1 miasta"
+		Polish:"Wyzwanie z limitem 1 miasta",
+		Traditional_Chinese:"單城市挑戰"
 	}
 
 	"No barbarians":{//it can be showed correct as usual, so I'm not translate it.
@@ -101,7 +102,8 @@
 
 	"No ancient ruins": {
 		Italian:"Niente antiche rovine"
-		Polish:"Bez antycznych ruin"
+		Polish:"Bez antycznych ruin",
+		Traditional_Chinese:"無古代遺跡"
 	}
 
 	"Victory conditions": {
@@ -1000,10 +1002,12 @@
 	"Music volume":{
 		Italian:"Volume musica"
 		Simplified_Chinese:"音乐音量"
+		Traditional_Chinese:"音樂音量"
 }
 
 	"Download music":{
-		Italian:"Scarica musica"
+		Italian:"Scarica musica",
+		Traditional_Chinese:"下載音樂"
 }
 
 	"Show":{
