Resolved #1307 - you no longer get a notification when conneccting to the cities of other Civs New notification when cities have disconnected from your capital

--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -703,6 +703,9 @@
 		Russian:"От города [cityName] был проложен путь к столице!"
 	}
 
+	"[cityName] has been disconnected from your capital!":{
+	}
+
 	// Trade
 	"[civName] has accepted your trade request":{
 		Italian:"[civName] ha accettato la nostra offerta commerciale."
