--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1409,7 +1409,7 @@
 	"Mechanized Infantry":{
 		Italian:"Fanteria meccanizzata"
 		Simplified_Chinese:"机械化步兵",
-		Traditional_Chinese:"機械化布兵",
+		Traditional_Chinese:"機械化步兵",
 		French:"Infantrie mécanisée"
 		Russian:"Мотопехота"
 		Czech:"Mechanizovaná pěchota"
